--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,16 @@
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
+        <groupId>com.google.guava</groupId>
+        <artifactId>guava</artifactId>
+        <version>16.0.1</version>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
+
 </project>
