--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,19 @@
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
-        <groupId>com.google.guava</groupId>
-        <artifactId>guava</artifactId>
-        <version>16.0.1</version>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>1.7.6</version>
+    </dependency>
+	<dependency>
+	  <groupId>org.slf4j</groupId>
+	  <artifactId>slf4j-log4j12</artifactId>
+	  <version>1.7.6</version>
+	</dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>16.0.1</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
@@ -20,10 +30,10 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-	<groupId>org.mockito</groupId>
-	  <artifactId>mockito-all</artifactId>
-	  <version>1.9.5</version>
-	  <scope>test</scope>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-all</artifactId>
+      <version>1.9.5</version>
+      <scope>test</scope>
     </dependency>           
   </dependencies>
   <build>
