--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
 		<groupId>commons-io</groupId>
 		<artifactId>commons-io</artifactId>
 		<version>2.4</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.reflections</groupId>
+	    <artifactId>reflections</artifactId>
+	    <version>0.9.9-RC1</version>
 	</dependency>	
     <dependency>
 	    <groupId>junit</groupId>
