--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.vijaysharma.ehyo</groupId>
   <artifactId>ehyo</artifactId>
   <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
+  <version>0.1</version>
   <name>ehyo</name>
   <url>http://maven.apache.org</url>
   <dependencies>
@@ -32,7 +32,12 @@
 	    <groupId>org.reflections</groupId>
 	    <artifactId>reflections</artifactId>
 	    <version>0.9.9-RC1</version>
-	</dependency>	
+	</dependency>
+	<dependency>
+		<groupId>com.squareup.retrofit</groupId>
+		<artifactId>retrofit</artifactId>
+		<version>1.5.0</version>
+	</dependency>
     <dependency>
 	    <groupId>junit</groupId>
 	    <artifactId>junit</artifactId>
