--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,11 @@
 		<artifactId>retrofit</artifactId>
 		<version>1.5.0</version>
 	</dependency>
+	<dependency>
+	    <groupId>com.googlecode.java-diff-utils</groupId>
+	    <artifactId>diffutils</artifactId>
+	    <version>1.2.1</version>
+	</dependency>	
     <dependency>
 	    <groupId>junit</groupId>
 	    <artifactId>junit</artifactId>
