--- a/pom.xml
+++ b/pom.xml
@@ -19,10 +19,10 @@
 		<version>4.6</version>
 	</dependency>
 	<dependency>
-		<groupId>jdom</groupId>
-		<artifactId>jdom</artifactId>
-		<version>1.1</version>
-	</dependency>	
+		<groupId>org.jdom</groupId>
+		<artifactId>jdom2</artifactId>
+		<version>2.0.5</version>
+	</dependency>
 	<dependency>
 		<groupId>commons-io</groupId>
 		<artifactId>commons-io</artifactId>
