--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,12 @@
 	    <groupId>com.googlecode.java-diff-utils</groupId>
 	    <artifactId>diffutils</artifactId>
 	    <version>1.2.1</version>
-	</dependency>	
+	</dependency>
+	<dependency>
+		<groupId>org.freemarker</groupId>
+		<artifactId>freemarker</artifactId>
+		<version>2.3.20</version>
+	</dependency>
     <dependency>
 	    <groupId>junit</groupId>
 	    <artifactId>junit</artifactId>
